Fix for progress bar

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1052,7 +1052,9 @@ a:hover {
 }
 .progressbar {
     height:8px;
-
+    position: absolute;
+    width: 100%;
+    bottom: 0;
     background:#E1E1E1;
 }
 #bar1 ,#bar2 ,#bar3 {
