Section 3 bg color fixes

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -755,6 +755,9 @@ a:hover {
         color:#FFF;
     }
 }
+#section3 .odd {
+    background-color: #e5e5e4;
+}
 .transparent {
     width: 100%;
     height: 100%;
