--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -857,7 +857,7 @@ a:hover {
     color: #FFF;
     align-items: left;
     justify-content: left;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.85);
     a {
         color: #FFF;
         &:hover {
@@ -1117,6 +1117,16 @@ a:hover {
     margin-top: 150px;
     @media (max-width: 769px) {
         text-align: center;
+    }
+    .copyrite {
+        width: 100%;
+        background-color: #30302f;
+        height: 25px;
+        font-size: 11px;
+        margin-top: -18px;
+        color: #FFF;
+        text-align: center;
+        padding: 6px;
     }
     #fsection1, #fsection2 {
         @media (max-width: 769px) {
