--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1123,12 +1123,17 @@ a:hover {
         background-color: #30302f;
         height: 25px;
         font-size: 11px;
-        margin-top: -18px;
+        margin-top: -24px;
         color: #FFF;
         text-align: center;
         padding: 6px;
+        position: absolute;
+        z-index: 9;
     }
     #fsection1, #fsection2 {
+        li {
+            padding-bottom: 10px;
+        }
         @media (max-width: 769px) {
             width:50%;
         }
