--- a/wp-content/themes/srijanalaya/css/animate.css
+++ b/wp-content/themes/srijanalaya/css/animate.css
@@ -8,12 +8,11 @@ Copyright (c) 2015 Daniel Eden
 */
 
 .animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+  -webkit-animation-duration: 0.3s !important;
+  animation-duration: 0.3s !important;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
-
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
