--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -207,8 +207,8 @@ a:hover {
 .dropdown-menu {
     background-color: #8cc344 !important;
     a {
-     color: #FFF !important;
- }  
+       color: #FFF !important;
+   }  
 }
 #myNavbar {
     background: rgba(33,33,33,1);
@@ -437,11 +437,11 @@ a:hover {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -454,9 +454,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
-   color:#E9204A;
+ color:#E9204A;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -506,7 +506,7 @@ a:hover {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -543,28 +543,31 @@ a:hover {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- left: 0;
- text-align:center;
- display:block;
- position:absolute;
- bottom:0;
- .btn {
-   display:inline-block;
-   padding-top:25px;
-   font-size:20px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:70px;
-   width:150px;
-   border-radius: 150px 150px 0 0;
-   -moz-border-radius: 150px 150px 0 0;
-   -webkit-border-radius: 150px 150px 0 0;
+   width:100%;
+   left: 0;
+   text-align:center;
+   display:block;
+   position:absolute;
+   bottom:-2px;
+   -webkit-transition: all 1s ease 0s; 
+   transition: all 1s ease 0s;
+   .btn {
+     display:inline-block;
+     padding-top:5px;
+     font-size:15px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:60px;
+     width:125px;
+     border-radius: 100px 100px 0 0;
+   // -moz-border-radius: 150px 150px 0 0;
+   // -webkit-border-radius: 150px 150px 0 0;
+
    @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
     height:50px;
     width:100px;
@@ -640,38 +643,28 @@ a:hover {
         -moz-transition-duration: 5s;
         -o-transition-duration: 5s;
     }
-    &:hover{
-        .outimg {
-         -webkit-transform:scale(1.1);
-         -moz-transform:scale(1.1);
-         transform:scale(1.1);
-         -o-transform:scale(1.1);
-     }
- }
+
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
-   }
-   &:hover{
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
+ }
+ &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
         border-color: #e91f4a;
-        -webkit-transform:scale(1.1);
-        -moz-transform:scale(1.1);
-        transform:scale(1.1);
-        -o-transform:scale(1.1);
+
     }
     .key {
-     color:#e9214b;
- }
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -700,9 +693,27 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
-   .key {
-     color:#e9214b;
- }
+ .key {
+   color:#e9214b;
+}
+}
+.quarter, .quarter2 {
+    &:hover {
+     .overlay{
+        display:none;
+    }
+    .outimg {
+       -webkit-transform:scale(1.1);
+       -moz-transform:scale(1.1);
+       transform:scale(1.1);
+       -o-transform:scale(1.1);
+   }
+   .post-navigate {
+    bottom:3px;
+
+}
+
+}
 }
 .section-container {
     padding: 0;
@@ -739,6 +750,11 @@ a:hover {
             }
         }
     }
+
+
+
+
+
 }
 .small-text {
     font-size: 14px;
@@ -891,16 +907,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-           display: block;
-           margin: 0;
-           padding: 0;
-           top: 0;
-           position: relative;
-           min-width: none;
-           width: auto;
-       }
-   }
-   .social-block {
+         display: block;
+         margin: 0;
+         padding: 0;
+         top: 0;
+         position: relative;
+         min-width: none;
+         width: auto;
+     }
+ }
+ .social-block {
     min-width: 233px;
     @media(max-width:769px) {
         width: 25%;
@@ -913,13 +929,13 @@ a:hover {
         text-align: center;
     }
     p {
-       font-size: 14px;
-       width: 98%;
-       background-color: #4c4b4c;
-       margin: 0;
-       padding: 16px 17px;
-       margin-bottom: 2px;
-   }
+     font-size: 14px;
+     width: 98%;
+     background-color: #4c4b4c;
+     margin: 0;
+     padding: 16px 17px;
+     margin-bottom: 2px;
+ }
 }
 }
 
@@ -1160,11 +1176,11 @@ a:hover {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             @media (max-width: 769px) {
-             box-sizing: border;
-             border-bottom: 1px solid #575656; 
-         }
-     }
- }
+               box-sizing: border;
+               border-bottom: 1px solid #575656; 
+           }
+       }
+   }
 }
 .home .footer {
     margin-top: 0;
@@ -1337,10 +1353,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-             color: #e91f4a;   
-         }
-     }
- }
+               color: #e91f4a;   
+           }
+       }
+   }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1435,10 +1451,10 @@ a:hover {
 
 }
 .date_filter {
-   display: inline;
-   margin:0px;
+ display: inline;
+ margin:0px;
 
-   .caret {
+ .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1528,19 +1544,19 @@ a:hover {
     }
 }
 .side-transparent-block {
- height: 150px;
- width: 280px;
- background-color: rgba(0, 0, 0, 0.8);
- position: absolute;
- display: flex;
- justify-content: center;
- align-items: center;
- text-align: center;
- top: 0;
- left: 0;
- z-index: 9;
- display: none;
- @media (max-width: 769px) {
+   height: 150px;
+   width: 280px;
+   background-color: rgba(0, 0, 0, 0.8);
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   top: 0;
+   left: 0;
+   z-index: 9;
+   display: none;
+   @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1580,10 +1596,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-               color: #e91f4a;
-           }
-       }
-   }
+             color: #e91f4a;
+         }
+     }
+ }
 }
 .subhead {
     h3 {
@@ -1607,26 +1623,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
-   display: inline-block;
-   margin-left:0px;
-   color: #807f7f;
-   font-weight: bold;
-   padding: 0;
-   border: 0px;
-   border-left:1px solid #E8E8E7;
-   height: 35px;
-   border-radius: 0;
-   width: 130px;
-   -moz-appearance: none;
-   -webkit-appearance: none;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   border-radius: 0px;
-   position: absolute;
-   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
-   border-right: 10px solid transparent;
+ display: inline-block;
+ margin-left:0px;
+ color: #807f7f;
+ font-weight: bold;
+ padding: 0;
+ border: 0px;
+ border-left:1px solid #E8E8E7;
+ height: 35px;
+ border-radius: 0;
+ width: 130px;
+ -moz-appearance: none;
+ -webkit-appearance: none;
+ -webkit-border-radius: 0px;
+ -moz-border-radius: 0px;
+ border-radius: 0px;
+ position: absolute;
+ background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+ border-right: 10px solid transparent;
 
-   &:hover {
+ &:hover {
     span {
         color: #FFF;
     }
