--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -969,7 +969,7 @@ a:hover {
        }
    }
    .social-block {
-    min-width: 233px;
+    min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
     }
@@ -987,6 +987,9 @@ a:hover {
        margin: 0;
        padding: 16px 17px;
        margin-bottom: 2px;
+   }
+   .last {
+    border: none;
    }
 }
 }
