--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1502,7 +1502,6 @@ a:hover {
         background: #E91F4A;
         color:#ffffff;
         font-weight: normal;
-        width:100px;
         padding:5px 0px 5px 5px;
         border-radius: 0px;
         &:hover {
@@ -1797,7 +1796,9 @@ form .btn {
         }
     }
 }
-
+.sidediv h2 {
+    font-size: 20px;
+}
 
 
 
