--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -92,6 +92,7 @@ p, .footer-bar {
 
     font-size: 20px;
     font-family: 'Helvetica';
+    line-height: 1.5;
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
         font-size:15px;
