--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -999,8 +999,9 @@ a:hover {
     list-style-type:none;
     position: fixed;
     right: 40px;
-    bottom: 20px;
+    bottom: 0px;
     z-index: 100;
+    //display:none;
     ul {
         list-style-type:none;
         margin-bottom: 0;
