Alert added to timeline

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1801,7 +1801,13 @@ form .btn {
 .sidediv h2 {
     font-size: 20px;
 }
-
+.alert-icon {
+    position: absolute;
+    top: 19px;
+    height: 21px;
+    width: 25px;
+    right: 27px;
+}
 
 
 
