--- a/wp-content/themes/srijanalaya/css/animate.css
+++ b/wp-content/themes/srijanalaya/css/animate.css
@@ -8,8 +8,14 @@ Copyright (c) 2015 Daniel Eden
 */
 
 .animated {
-  -webkit-animation-duration: 0.3s !important;
-  animation-duration: 0.3s !important;
+  -webkit-animation-duration: 1.2s !important;
+  animation-duration: 1.2s !important;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+#slider-1 .animated {
+  -webkit-animation-duration: .2s !important;
+  animation-duration: .2s !important;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
@@ -3092,7 +3098,7 @@ Copyright (c) 2015 Daniel Eden
   }
 
   to {
-    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(-50%, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -3185,7 +3191,7 @@ Copyright (c) 2015 Daniel Eden
 
   to {
     visibility: hidden;
-    -webkit-transform: translate3d(-100%, 0, 0);
+    -webkit-transform: translate3d(-200%, 0, 0);
     transform: translate3d(-100%, 0, 0);
   }
 }
