--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -28,6 +28,7 @@
 @import "yamm.less";
 @import "timeline.less";
 @import "calender.less";
+@import "product.less";
 
 //variables
 @black: #000000;
@@ -1749,7 +1750,13 @@ form .btn {
     width: 25px;
     right: 27px;
 }
-
+.navigation {
+    visibility: hidden;
+}
+#infscr-loading {
+    width: 100%;
+    text-align: center;
+}
 
 
 @media(max-width:991px) {
