--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -213,8 +213,8 @@ a:hover {
     background-color: #8cc344 !important;
     padding-top: 25px !important;
     a {
-     color: #FFF !important;
- }  
+       color: #FFF !important;
+   }  
 }
 #myNavbar {
     background: rgb(39, 36, 37);
@@ -445,9 +445,9 @@ a:hover {
     &:hover {
         #slider-1 {
             h1 {
-             color: #E9204A;
-         } 
-         h2 {
+               color: #E9204A;
+           } 
+           h2 {
             color: #000;
         }
     }
@@ -474,11 +474,11 @@ a:hover {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -491,9 +491,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
-   color:#898B8E;
+ color:#898B8E;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -543,7 +543,7 @@ a:hover {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -580,28 +580,28 @@ a:hover {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- left: 0;
- text-align:center;
- display:block;
- position:absolute;
- bottom:-5px;
- -webkit-transition: all 1s ease 0s; 
- transition: all 1s ease 0s;
- .btn {
-   display:inline-block;
-   padding-top:5px;
-   font-size:15px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:60px;
-   width:125px;
-   border-radius: 100px 100px 0 0;
+   width:100%;
+   left: 0;
+   text-align:center;
+   display:block;
+   position:absolute;
+   bottom:-5px;
+   -webkit-transition: all 1s ease 0s; 
+   transition: all 1s ease 0s;
+   .btn {
+     display:inline-block;
+     padding-top:5px;
+     font-size:15px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:60px;
+     width:125px;
+     border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -684,15 +684,15 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
-   }
-   &:hover{
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
+ }
+ &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -700,8 +700,8 @@ a:hover {
 
     }
     .key {
-     color:#e9214b;
- }
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -730,22 +730,22 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
-   .key {
-     color:#e9214b;
- }
+ .key {
+   color:#e9214b;
+}
 }
 .quarter, .quarter2 {
     &:hover {
-       .overlay{
+     .overlay{
         display:none;
     }
     .outimg {
-     -webkit-transform:scale(1.1);
-     -moz-transform:scale(1.1);
-     transform:scale(1.1);
-     -o-transform:scale(1.1);
- }
- .post-navigate {
+       -webkit-transform:scale(1.1);
+       -moz-transform:scale(1.1);
+       transform:scale(1.1);
+       -o-transform:scale(1.1);
+   }
+   .post-navigate {
     bottom:0px;
 
 }
@@ -960,16 +960,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-           display: block;
-           margin: 0;
-           padding: 0;
-           top: 0;
-           position: relative;
-           min-width: none;
-           width: auto;
-       }
-   }
-   .social-block {
+         display: block;
+         margin: 0;
+         padding: 0;
+         top: 0;
+         position: relative;
+         min-width: none;
+         width: auto;
+     }
+ }
+ .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -982,16 +982,16 @@ a:hover {
         text-align: center;
     }
     p {
-       font-size: 14px;
-       width: 98%;
-       background-color: #4c4b4c;
-       margin: 0;
-       padding: 16px 17px;
-       margin-bottom: 2px;
-   }
-   .last {
+     font-size: 14px;
+     width: 98%;
+     background-color: #4c4b4c;
+     margin: 0;
+     padding: 16px 17px;
+     margin-bottom: 2px;
+ }
+ .last {
     border: none;
-   }
+}
 }
 }
 
@@ -1179,11 +1179,11 @@ a:hover {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             @media (max-width: 769px) {
-             box-sizing: border;
-             border-bottom: 1px solid #575656; 
-         }
-     }
- }
+               box-sizing: border;
+               border-bottom: 1px solid #575656; 
+           }
+       }
+   }
 }
 .home .footer {
     margin-top: 0;
@@ -1360,10 +1360,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-             color: #e91f4a;   
-         }
-     }
- }
+               color: #e91f4a;   
+           }
+       }
+   }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1457,10 +1457,10 @@ a:hover {
 
 }
 .date_filter {
-   display: inline;
-   margin:0px;
+ display: inline;
+ margin:0px;
 
-   .caret {
+ .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1550,19 +1550,19 @@ a:hover {
     }
 }
 .side-transparent-block {
- height: 150px;
- width: 280px;
- background-color: rgba(0, 0, 0, 0.8);
- position: absolute;
- display: flex;
- justify-content: center;
- align-items: center;
- text-align: center;
- top: 0;
- left: 0;
- z-index: 9;
- display: none;
- @media (max-width: 769px) {
+   height: 150px;
+   width: 280px;
+   background-color: rgba(0, 0, 0, 0.8);
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   top: 0;
+   left: 0;
+   z-index: 9;
+   display: none;
+   @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1602,10 +1602,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-               color: #e91f4a;
-           }
-       }
-   }
+             color: #e91f4a;
+         }
+     }
+ }
 }
 .subhead {
     h3 {
@@ -1629,26 +1629,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
-   display: inline-block;
-   margin-left:0px;
-   color: #807f7f;
-   font-weight: bold;
-   padding: 0;
-   border: 0px;
-   border-left:1px solid #E8E8E7;
-   height: 35px;
-   border-radius: 0;
-   width: 130px;
-   -moz-appearance: none;
-   -webkit-appearance: none;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   border-radius: 0px;
-   position: absolute;
-   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
-   border-right: 10px solid transparent;
+ display: inline-block;
+ margin-left:0px;
+ color: #807f7f;
+ font-weight: bold;
+ padding: 0;
+ border: 0px;
+ border-left:1px solid #E8E8E7;
+ height: 35px;
+ border-radius: 0;
+ width: 130px;
+ -moz-appearance: none;
+ -webkit-appearance: none;
+ -webkit-border-radius: 0px;
+ -moz-border-radius: 0px;
+ border-radius: 0px;
+ position: absolute;
+ background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+ border-right: 10px solid transparent;
 
-   &:hover {
+ &:hover {
     span {
         color: #FFF;
     }
@@ -1757,6 +1757,39 @@ form .btn {
     width: 100%;
     text-align: center;
 }
+.social-expand-buttons {
+    .social-expand {
+        color: #FFF;
+        background-color: #8cc344;
+        padding: 5px;
+        border-radius: 10px 10px;
+        height: 20px;
+        width: 20px;
+        display: inline-block;
+        margin: 0 auto;
+        cursor: pointer;
+        i {
+            margin-top: -2px;
+            display: block;
+            margin-left: -1px;
+        }
+    }
+    ul.share-buttons {
+        padding-left: 10px;
+        display: none;
+        border-left: none !important;
+        li {
+            &:hover {
+                i {
+                    color: #8cc344;
+                }
+            }
+        }
+    }
+}
+
+
+
 
 
 @media(max-width:991px) {
