--- a/wp-content/themes/srijanalaya/less/product.less
+++ b/wp-content/themes/srijanalaya/less/product.less
@@ -2,6 +2,9 @@
 	position: relative;
 	height: 450px;
 	overflow: hidden;
+	@media (max-width:769px) {
+		height: auto;
+	}
 	.product-img {
 		background-size: cover !important;
 		background-repeat: no-repeat;
@@ -45,6 +48,63 @@
 		background-repeat: no-repeat;
 		margin-bottom: 20px;
 		position: relative;
+		.content {
+			display: none;
+			h2 {
+				color: #424243;
+				font-size: 16px;
+				line-height: 1;
+			}
+			p {
+				padding-right: 0;
+			}
+			position: absolute;
+			color: #807f7f;
+			left: 0;
+			bottom: 0;
+			background-color: #dfdedd;
+			padding: 20px 100px;
+			opacity: 0.7;
+			-webkit-transition-duration: 5s;
+			-moz-transition-duration: 5s;
+			-o-transition-duration: 5s;
+		}
+		&:hover {
+			.content {
+				display: block;
+			}
+		}
+	}
+}
+.gallary-image {
+	margin-top: 25px;
+	.product-img {
+		background-size: cover !important;
+		background-repeat: no-repeat;
+		height: 450px;
+	}
+}
+.product-des {
+	p {
+		padding-right: 10px !important;
+	}
+	@media (max-width:769px) {
+		padding: 40px;
+	}
+}
+.related-products {
+	margin-top: 25px;
+	position: relative;
+	height: 350px;
+	h5 {
+		font-weight: bold;
+		margin-left: 100px;
+		margin-bottom: 10px;
+	}
+	.inner-wrapper {
+		background-size: cover !important;
+		background-repeat: no-repeat;
+		height: 350px;
 		.content {
 			display: none;
 			h2 {
