--- a/wp-content/themes/srijanalaya/less/product.less
+++ b/wp-content/themes/srijanalaya/less/product.less
@@ -19,6 +19,7 @@
 		}
 		p {
 			padding-right: 0;
+			font-size: 11px !important;
 		}
 		position: absolute;
 		color: #807f7f;
@@ -57,6 +58,7 @@
 			}
 			p {
 				padding-right: 0;
+				font-size: 11px !important;
 			}
 			position: absolute;
 			color: #807f7f;
@@ -87,6 +89,7 @@
 .product-des {
 	p {
 		padding-right: 10px !important;
+		font-size: 11px !important;
 	}
 	@media (max-width:769px) {
 		padding: 40px;
@@ -114,6 +117,7 @@
 			}
 			p {
 				padding-right: 0;
+				font-size: 11px !important;
 			}
 			position: absolute;
 			color: #807f7f;
@@ -132,4 +136,14 @@
 			}
 		}
 	}
+}
+
+.single_add_to_cart_button {
+	background-color: #e91f4a !important;
+}
+.input-text.qty {
+	height: 32px;
+	border-radius: 5px;
+	border: 1px solid #CCC;
+	color: #424243;
 }
