--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -477,6 +477,7 @@ a:hover {
    position: relative;
    top: 100px;
    width: 50%;
+   height:100%;
    margin-left: 100px;
    @media(max-width:769px) {
     top:30px;
