Theme Newsletter db

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -366,7 +366,7 @@ a:hover {
                             border-top-right-radius: 0 !important;
                             background: #8cc344;
                             &:hover {
-                                background: none;
+                                background: #8cc344;
                                 color: #FFF;
                             }
                         }
