--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1186,6 +1186,7 @@ a:hover {
             padding-top: 60px;
             box-sizing: border;
             border-bottom: 1px solid #575656; 
+            cursor: pointer;
             @media (max-width: 769px) {
                box-sizing: border;
                border-bottom: 1px solid #575656; 
@@ -1804,7 +1805,48 @@ form .btn {
     width: 20px !important;
     height: 20px !important;
 }
-
+ .newsletter {
+    cursor: pointer;
+}
+.newsletter-popup {
+    position: fixed;
+    top: 0;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+    opacity: 0.9;
+    display: none;
+    .close-newsletter {
+        color: #FFF;
+        position: absolute;
+        right: 20px;
+        top:20px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    label {
+        color: #FFF;
+    }
+    input {
+        height: 25px;
+        border: 1px solid #ccc;
+        padding: 5px;
+        color: #807f7f
+    }
+    .button {
+        background-color: #e91f4a !important;
+        color: #FFF !important;
+        border-radius: 0 !important; 
+        padding: 8px;
+        &:hover {
+            opacity: 0.7;
+        }
+    }
+}
 
 
 @media(max-width:991px) {
