--- a/wp-content/themes/srijanalaya/less/product.less
+++ b/wp-content/themes/srijanalaya/less/product.less
@@ -59,7 +59,7 @@
 	form {
 		position: absolute;
 		bottom: 0;
-		right: 1px;
+		right: 0;
 		button.single_add_to_cart_button {
 			background-color: #3f3e40 !important;
 			border-radius: 0 !important; 
@@ -69,6 +69,9 @@
 			}
 		}
 	}
+	.img-cov {
+			margin-left: -5px;
+		}
 	.inner-wrapper {
 		height: 320px;
 		background-size: cover !important;
