Product Page Filters

--- a/wp-content/themes/srijanalaya/less/product.less
+++ b/wp-content/themes/srijanalaya/less/product.less
@@ -192,6 +192,24 @@
 	color: #424243;
 }
 
+#custom_filters {
+	.mid-nav-inner {
+		padding-left: 130px !important;
+	}
+}
+.single-product #custom_filters {
+	.mid-nav-inner {
+		padding-left: 0 !important;
+	}
+}
+form .transformSelect1 {
+	border-right: 1px solid #e2e2e2;
+}
+.transformSelectDropdown {
+	li {
+		display: block !important;
+	}
+}
 //Cart
 .woocommerce-cart {
 	a {
@@ -349,4 +367,7 @@
 			opacity: 0.7;
 		}
 	}
+}
+.woocommerce .page-content {
+	padding-top: 0;
 }
